# antares

./: .clang-format  .drone.yml  .gitignore  .gitmodules  .gn  .mailmap  .travis.yml  AUTHORS  Antares.gyp  Antares.jam  BUILD.gn  CONTRIBUTING  Jamfile  Jamfile.in  Makefile  README  README.rst  antares.gyp  configure  defaults.gypi  make-msvc.bat  waf  wscript
.github/workflows/: ci.yaml
cov/: reachable.json  report.py
cov/covered/: and-it-feels-so-good.json  astrotrash-plus.json  blood-toil-tears-sweat.json  hand-over-fist.json  hornets-nest.json  make-way.json  moons-for-goons.json  out-of-the-frying-pan.json  shoplifter-1.json  space-race.json  the-left-hand.json  the-mothership-connection.json  the-stars-have-ears.json  while-the-iron-is-hot.json  yo-ho-ho.json  you-should-have-seen-the-one-that-got-away.json
data/rot /: 500.r
doc/: Makefile  author.rst  gamepad.rst  glossary.rst  interface.dot  net.rst  packaging.rst  pbuilderrc.sample  releasing.rst
doc/img/: Makefile  gamepad.xsl  pilot.xml  select.xml  target.xml
include/: Admiral.h  Admiral.hpp  AntaresController.h  AntaresExtractDataController.h  AnyChar.h  AnyChar.hpp  Ares Demo Scanner.h  Ares Global Type.h  Ares Network.h  Ares Preferences.h  AresAppleEvent.h  AresAppleEvent.hpp  AresCheat.h  AresCheat.hpp  AresDemoScanner.hpp  AresExternalFile.h  AresExternalFile.hpp  AresGameRanger.h  AresGameRanger.hpp  AresGlobalType.h  AresGlobalType.hpp  AresGuideMaker.h  AresGuideMaker.hpp  AresMain.h  AresMain.hpp  AresMoviePlayer.h  AresMoviePlayer.hpp  AresNetwork.h  AresNetwork.hpp  AresNetworkSprocket.h  AresNetworkSprocket.hpp  AresPreferences.h  AresPreferences.hpp  AresResFile.h  AresResFile.hpp  AresVersion.h  AresVersion.hpp  Ares_GameRanger.h  Ares_ResFile.h  Ares_Version.h  (+224 more)
include/cocoa/: AntaresController.h  AntaresExtractDataController.h  AntaresSettingsController.h  audio-file.hpp  core-foundation.hpp  core-opengl.hpp  fullscreen.hpp  prefs-driver.hpp  video-driver.hpp  windowed.hpp
include/config/: dirs.hpp  file-prefs-driver.hpp  gamepad.hpp  keys.hpp  ledger.hpp  platform.hpp  preferences.hpp
include/data/: action.hpp  audio.hpp  base-object.hpp  briefing.hpp  cash.hpp  condition.hpp  counter.hpp  distance.hpp  enums.hpp  extractor.hpp  field.hpp  font-data.hpp  handle.hpp  info.hpp  initial.hpp  interface.hpp  level.hpp  map.hpp  object-ref.hpp  picture.hpp  plugin.hpp  pn.hpp  races.hpp  range.hpp  replay-list.hpp  replay.hpp  resource.hpp  scenario-list.hpp  scenario.hpp  sndfile.hpp  space-object.hpp  sprite-data.hpp  string-list.hpp  tags.hpp
include/drawing/: briefing.hpp  build-pix.hpp  color.hpp  interface-text.hpp  interface.hpp  offscreen-gworld.hpp  pix-map.hpp  pix-table.hpp  retro-text.hpp  shapes.hpp  sprite-handling.hpp  styled-text.hpp  text.hpp
include/game/: action.hpp  admiral.hpp  beam.hpp  cheat.hpp  condition.hpp  cursor.hpp  globals.hpp  initial.hpp  input-source.hpp  instruments.hpp  labels.hpp  level.hpp  main.hpp  messages.hpp  minicomputer.hpp  motion.hpp  non-player-ship.hpp  player-ship.hpp  scenario-maker.hpp  space-object.hpp  starfield.hpp  sys.hpp  time.hpp  vector.hpp
include/glfw/: video-driver.hpp
include/lang/: casts.hpp  defines.hpp  exception.hpp
include/linux/: offscreen.hpp
include/mac/: AntaresController.h  AntaresExtractDataController.h  audio-file.hpp  core-foundation.hpp  core-opengl.hpp  fullscreen.hpp  offscreen.hpp  prefs-driver.hpp  video-driver.hpp  windowed.hpp
include/math/: fixed.hpp  geometry.hpp  macros.hpp  random.hpp  rotation.hpp  scale.hpp  special.hpp  units.hpp
include/net/: http.hpp
include/sound/: driver.hpp  fx.hpp  music.hpp  openal-driver.hpp  sndfile.hpp  xaudio2-driver.hpp
include/ui/: card.hpp  editable-text.hpp  event-scheduler.hpp  event-tracker.hpp  event.hpp  interface-handling.hpp  interface-screen.hpp  screen.hpp  widget.hpp
include/video/: driver.hpp  offscreen-driver.hpp  opengl-driver.hpp  opengl-dynamic.hpp  text-driver.hpp  transitions.hpp
include/win/: main.hpp  offscreen.hpp
proto/: replay.proto
resources/: Antares-Info.plist  Antares.icns  antares.desktop  antares.icns  antares.xml  container-migration.plist  entitlements.plist
resources/ExtractData.nib/: designable.nib  keyedobjects.nib
resources/MainMenu.nib/: designable.nib  keyedobjects.nib
scripts/: __init__.py  antares-launcher  antares_launcher.py  bintopng  build-font  build-interface  build-nightly.sh  cfg.py  convert.sh  data-test  deps.py  dist.py  download  embed.py  gen-install.py  generate-fixed-table.py  generate-info-plist.py  gyp.rb  installdeps.py  load-cert.sh  nightly  ninja.sh  notarize  offscreen-test  pb  play-sound-log  pngtobin  release  replay-test  replay-to-movie  set-version  test  test-diff  test.py  upgrade-nlrp  upload  xreplays
src/: Admiral.c  Admiral.cpp  AntaresController.mm  AntaresExtractDataController.mm  AnyChar String Handling.c  AnyCharStringHandling.c  AnyCharStringHandling.cpp  Ares Preferences.c  AresAppleEvent.c  AresAppleEvent.cpp  AresCheat.c  AresCheat.cpp  AresDemoScanner.c  AresDemoScanner.cpp  AresExternalFile.c  AresExternalFile.cpp  AresGameRanger.c  AresGameRanger.cpp  AresGlobalType.cpp  AresGuideMaker.c  AresGuideMaker.cpp  AresMain.c  AresMain.cpp  AresMoviePlayer.c  AresMoviePlayer.cpp  AresNetworkSprocket.c  AresNetworkSprocket.cpp  AresPreferences.c  AresPreferences.cpp  AresResFile.c  AresResFile.cpp  AresVersion.c  AresVersion.cpp  Ares_AppleEvent.c  Ares_External_File.c  Ares_ResFile.c  Ares_Version.c  Beam.c  Beam.cpp  BinaryStream.cpp  (+183 more)
stubs/: AEPackObject.h  AIFF.h  AltPreferences.h  AmbrosiaSerial.h  AppleEvent.h  Base.h  ConditionalMacros.h  CopyProtection.h  DialogFont.h  Files.h  Fonts.h  GXMath.h  GameRanger.h  ICAPI.h  LoadClip2Gif.h  LowMem.h  MAD.h  MacTypes.h  MixedMode.h  Movies.h  Navigation.h  NetSprocket.h  Palettes.h  Process.h  QDOffscreen.h  Quickdraw.h  RDriver.h  RegistrationTool.h  Resources.h  SetFontByString.h  Sound.h  Speech.h  Stub.h  TextEdit.h  Timer.h  ToolUtils.h  Traps.h  appletalk.h  str_bp.h  strlist.h
tools/: antares_test.py
(+195 files in other folders)
